# ev3rust

./: ev3dev_lang_rust_expanded.rs
ev3dev-lang-rust-expanded/: Cargo.toml
ev3dev-lang-rust-expanded/src/: lib.rs
versionA/: Cargo.toml  readme.md
versionA/src/: ev3.rs  main.rs
versionB/: Cargo.toml  readme.md
versionC/: Cargo.toml  readme.md
versionC/src/: ev3.rs  main.rs
