[package]
name = "ev3rustWithExpanded"
version = "0.1.0"
authors = ["Anonymous <anon@ymo.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
ev3dev-lang-rust-expanded = { path = "ev3dev-lang-rust-expanded", version="0.7.0" }

[dependencies.ev3dev-lang-rust-derive]
version = "0.5"